@@ -5,6 +5,7 @@
 -大きな変更点
 --IE8以前のサポートを止めました（関連コードを削除しました）。
 --pop/akaneテーマを収録しました。
+--[http://adiary.org/v3man/Satsuki-detail/MathJax:MathJax/TeX記法]を使いやすくしました。
 -システム面
 --nginxに正式対応しました。((以前のものでも設定次第では動きます))
 --ページキッシュ機能を実装しました。
